--- a/index.html
+++ b/index.html
@@ -409,13 +409,44 @@
          </div>
         </div>
         </footer>
-   <div class="backdrop is-hidden" data-modal>
+   <div class="backdrop " data-modal>
        <div class="modal">
-            <btn class="modal-closed" data-modal-close>
+            <btn class="modal-closed-btn is-hidden" data-modal-close>
                 <svg class="icon-closed-modal">
                     <use href="./images/icon.svg#icon-closed" ></use>
                 </svg>
             </btn>
+
+            <div class="registration-form">
+
+                <h2>Оставьте свои данные, мы вам перезвоним</h2>
+
+            <form name="signup-form">
+                <label>
+                    Имя
+                    <input type="text" name="name" />
+                </label>
+                <label>
+                    Телефон
+                    <input type="tel" name="phone" />
+                </label>
+                <label>
+                    Email
+                    <input type="email" name="email" />
+                </label>
+                
+                <label>
+                    Комментарий
+                    <textarea name="feedback" placeholder="Введите текст"></textarea>
+                </label>
+                <label>
+                    <input class="agree-with-contract"  type="checkbox" name="agree-with-contract" value="agree"  />
+                    Соглашаюсь с рассылкой и принимаю  <a href="#">Условия договора</a>
+                  </label>
+                <button class="submit-btn" type="submit">Отправить</button>
+            </form>
+            </div>
+
        </div>
    </div>
    <script src="./js/modal.js"></script>
