--- a/index.html
+++ b/index.html
@@ -421,27 +421,43 @@
 
                 <h2>Оставьте свои данные, мы вам перезвоним</h2>
 
-            <form name="signup-form">
+            <form class="signup-form" name="signup-form">
                 <label>
                     Имя
+                    <span class="icon-form-wrapper">
                     <input type="text" name="name" />
+                    <svg class="icon-form-svg"  >
+                        <use href="./images/icon.svg#icon-closed"></use>
+                    </svg>
+                    </span>
                 </label>
                 <label>
                     Телефон
+                    <span class="icon-form-wrapper">
                     <input type="tel" name="phone" />
+                    <svg  class="icon-form-svg" >
+                        <use href="./images/icon.svg#icon-closed"></use>
+                    </svg>
+                    </span>
                 </label>
                 <label>
-                    Email
+                    Почта
+                    <span class="icon-form-wrapper">
                     <input type="email" name="email" />
+                    <svg class="icon-form-svg" fill='black'>
+                        <use href="./images/icon.svg#icon-closed"></use>
+                    </svg>
+                    </span>
                 </label>
                 
                 <label>
                     Комментарий
                     <textarea name="feedback" placeholder="Введите текст"></textarea>
                 </label>
-                <label>
+                <label class="checkbox-label">
                     <input class="agree-with-contract"  type="checkbox" name="agree-with-contract" value="agree"  />
-                    Соглашаюсь с рассылкой и принимаю  <a href="#">Условия договора</a>
+                    Соглашаюсь с рассылкой и принимаю
+                    <a class="contract-link" href="#">Условия договора</a>
                   </label>
                 <button class="submit-btn" type="submit">Отправить</button>
             </form>
