--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                     <span class="icon-form-wrapper">
                     <input type="text" name="name" />
                     <svg class="icon-form-svg"  >
-                        <use href="./images/icon.svg#icon-closed"></use>
+                        <use href="./images/icon.svg#icon-twitter"></use>
                     </svg>
                     </span>
                 </label>
@@ -454,10 +454,15 @@
                     Комментарий
                     <textarea name="feedback" placeholder="Введите текст"></textarea>
                 </label>
-                <label class="checkbox-label">
-                    <input class="agree-with-contract"  type="checkbox" name="agree-with-contract" value="agree"  />
-                    Соглашаюсь с рассылкой и принимаю
-                    <a class="contract-link" href="#">Условия договора</a>
+                <input class="agree-with-contract  "  
+                type="checkbox" 
+                name="agree-with-contract" 
+                value="agree" 
+                id="agree-with-contract" />
+                
+                <label for="agree-with-contract" class="checkbox-label">
+                    <span> Соглашаюсь с рассылкой и принимаю
+                    <a class="contract-link" href="#">Условия договора</a></span>
                   </label>
                 <button class="submit-btn" type="submit">Отправить</button>
             </form>
