--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="./css/style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
+<link rel="stylesheet" href="./css/style.css">   
     <title>Студия</title>
 </head>
 <body>
@@ -470,7 +470,7 @@
                     <svg class="icon-checkin">
                         <use href="./images/icon.svg#icon-checkin"></use>
                     </svg>
-                    <span> Соглашаюсь с рассылкой и принимаю </span>
+                    <span>Соглашаюсь с рассылкой и принимаю &nbsp</span>
                     <a class="contract-link" href="#">Условия договора</a>
                 </label>
                 
