--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
                     <svg class="icon-checkin">
                         <use href="./images/icon.svg#icon-checkin"></use>
                     </svg>
-                    <span>Соглашаюсь с рассылкой и принимаю &nbsp</span>
+                    <span>Соглашаюсь с рассылкой и принимаю &nbsp;</span>
                     <a class="contract-link" href="#">Условия договора</a>
                 </label>
                 
